# Hadik

./: CMakeLists.txt  client.c  communication.c  communication.h  game.c  game.h  menu.c  menu.h  server.c
maps/: a.txt
